FEATURE/ added session-detail page-2

--- a/session-detail.html
+++ b/session-detail.html
@@ -163,7 +163,6 @@
                         الورشة
                     </h3>
                     <p class="quote-about-session">
-                        <img src="/assets/user-purple.png" alt="user-icon">
                         جلسة تفاعلية تهدف إلى دعم الصحة النفسية وتعزيز
                         الشعور بالأمل لدى
                         المستفيدات، من خلال مساحة آمنة للمشاركة والتعبير عن
@@ -174,13 +173,17 @@
                 </div>
 
                 <div class="session-host-card ">
-                    <h3>مقدمة الورشة</h3>
+
+                    <h3 class="title-about-session">
+                        <img src="/assets/user-purple.png" alt="user-icon">
+                        مقدمة الورشة
+                    </h3>
 
                     <div class="host-info">
                         <img src="/assets/user-picture.png" alt="speaker">
                         <div>
                             <h4>أ. سارة الغامدي</h4>
-                            <p>خبيرة في الدعم النفسي المجتمعي وإدارة جلسات
+                            <p class="quote-about-session">خبيرة في الدعم النفسي المجتمعي وإدارة جلسات
                                 الدعم للنساء</p>
                         </div>
                     </div>
