FEATURE/ added session-detail page-3

--- a/session-detail.html
+++ b/session-detail.html
@@ -101,7 +101,7 @@
 
             <div class="session-detail-layout">
                 <div class="session-price-card">
-                    <div>
+                    <div class="price-flex">
                         <div class="price-header">
                             <span class="price-label">سعر التسجيل</span>
                             <span class="price-value">مجانا</span>
