FEATURE/ added session-detail page-4

--- a/session-detail.html
+++ b/session-detail.html
@@ -109,9 +109,10 @@
 
                         <div class="seats">
                             <span>باقي 5 مقاعد</span>
-                            <div class="progress">
-                                <span></span>
+                            <div class="progress-circle">
+                                <span>70%</span>
                             </div>
+
                         </div>
                     </div>
 
@@ -183,7 +184,8 @@
                         <img src="/assets/user-picture.png" alt="speaker">
                         <div>
                             <h4>أ. سارة الغامدي</h4>
-                            <p class="quote-about-session">خبيرة في الدعم النفسي المجتمعي وإدارة جلسات
+                            <p class="quote-about-session">خبيرة في الدعم النفسي
+                                المجتمعي وإدارة جلسات
                                 الدعم للنساء</p>
                         </div>
                     </div>
