FEATURE/ added session-detail page-5

--- a/session-detail.html
+++ b/session-detail.html
@@ -109,8 +109,10 @@
 
                         <div class="seats">
                             <span>باقي 5 مقاعد</span>
-                            <div class="progress-circle">
-                                <span>70%</span>
+                            <div class="progress-container">
+                                <div class="progress-circle">
+                                    <span>70%</span>
+                                </div>
                             </div>
 
                         </div>
