--- a/session-detail.html
+++ b/session-detail.html
@@ -16,9 +16,9 @@
             href="https://fonts.googleapis.com/css2?family=Cairo:slnt,wght@-11..11,200..1000&display=swap"
             rel="stylesheet">
 
-        <link rel="stylesheet" href="varaiables.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="media.css">
+        <link rel="stylesheet" href="/style/varaiables.css">
+        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="/style/media.css">
 
     </head>
     <body dir="rtl">
@@ -118,7 +118,7 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-primary full-width">
+                    <button class="btn btn-primary full-width" onclick="goToSessionForm()">
                         سجل الآن <span>←</span>
                     </button>
                 </div>
