Feature/ added/ email-verify-form

--- a/forms/email-verify.html
+++ b/forms/email-verify.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -17,28 +18,30 @@
             rel="stylesheet">
 
         <link rel="stylesheet" href="/style/forms-style/form.css">
-        <link rel="stylesheet" href="/style/forms-style/is-member.css">
     </head>
     <body>
         <div class="container-form">
-            <div class="form ">
-                <div class="form-container">
+            <div class="form form-large form-gradient">
+                <div class="form-container form-large">
                     <div class="form-logo">
-                        <img src="/assets/circle-form.png" alt>
+                        <img src="/assets/shield.png" alt>
                     </div>
                     <div class="form-question">
-                        هل أنت عضو في جمعية السرطان السعودية؟
+                        التحقق من البريد الالكتروني
                     </div>
-                    <div class="quote">
-                        يرجي تأكيد عضويتك لتوجيهك الي النموذج الصحيح لاتمام حجز
-                        القاعه نحن نسعي لتقديم افضل خدمة ممكنة لاعضائنا وزوارنا
-                        الكرام
+                    <div class="quote quote-primary">
+                       يرجى إدخال بريدك الالكتروني او رقم الهاتف 
                     </div>
-    
+                    <div class="form-input">
+                        <input type="text" placeholder="بريدك الالكتروني / رقم الهاتف ">
+                    </div>
                     <div class="form-btn-container">
-                        <button class="form-btn form-btn-secondary last-button"> لا، لست عضوًا</button>
-                        <button class="form-btn form-btn-primary " onclick="goToEmailVerifyForm()">نعم، أنا عضو</button>
+                        <button class="form-btn form-btn-primary btn-full"> <span>←</span>متابعه</button>
                     </div>
+                </div>
+                <div class="form-footer">
+                    <div class="footer-link">تواصل معنا </div>
+                    <div class="footer-question">تحتاج مساعدة ؟</div>
                 </div>
             </div>
         </div>
