Feature/ added/ email-verify-form-1

--- a/forms/otp-form.html
+++ b/forms/otp-form.html
@@ -26,7 +26,7 @@
                     <div class="form-logo">
                         <img src="/assets/shield.png" alt>
                     </div>
-                    <div class="form-question form-question-title">
+                    <div class="form-question">
                         التحقق من البريد الالكتروني
                     </div>
                     <div class="quote quote-primary">
