Feature/ added/ email-verify-form-2

--- a/forms/email-verify.html
+++ b/forms/email-verify.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>is member ?</title>
+        <title>Email Verify</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -29,7 +29,7 @@
                     <div class="form-question form-question-title">
                         التحقق من البريد الالكتروني
                     </div>
-                    <div class="quote quote-primary">
+                    <div class="quote quote-primary quote-primary-padding">
                        يرجى إدخال بريدك الالكتروني او رقم الهاتف 
                     </div>
                     <div class="form-input">
