Feature/ added/ otp-form

--- a/forms/is-member.html
+++ b/forms/is-member.html
@@ -24,7 +24,7 @@
             <div class="form ">
                 <div class="form-container">
                     <div class="form-logo">
-                        <img src="/assets/circle-form.png" alt>
+                        <img src="/assets/circle-form.png" alt="person-logo">
                     </div>
                     <div class="form-question">
                         هل أنت عضو في جمعية السرطان السعودية؟
