--- a/forms/otp-form.html
+++ b/forms/otp-form.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>OTP</title>
+        <title>Email Verify</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -24,19 +24,31 @@
             <div class="form form-large form-gradient">
                 <div class="form-container form-large">
                     <div class="form-logo">
-                        <img src="/assets/shield.png" alt>
+                        <img src="/assets/secure.png" alt="secure">
                     </div>
-                    <div class="form-question">
-                        التحقق من البريد الالكتروني
+                    <div class="form-question form-question-title">
+                        تأكيد الهوية
                     </div>
-                    <div class="quote quote-primary">
-                       يرجى إدخال بريدك الالكتروني او رقم الهاتف 
+                    <div
+                        class="quote quote-primary quote-primary-padding otp-quote">
+                        لأمان حسابك، يرجى إدخال رمز التحقق المرسل إلى بيانات
+                        التواصل المسجلة لديك
                     </div>
-                    <div class="form-input">
-                        <input type="text" placeholder="بريدك الالكتروني / رقم الهاتف ">
+                    <div class="form-input otp-flex">
+                        <input class="otp-input" type="text" placeholder="0">
+                        <input class="otp-input" type="text" placeholder="0">
+                        <input class="otp-input" type="text" placeholder="0">
+                        <input class="otp-input" type="text" placeholder="0">
+                        <input class="otp-input" type="text" placeholder="0">
+                        <input class="otp-input" type="text" placeholder="0">
                     </div>
                     <div class="form-btn-container">
-                        <button class="form-btn form-btn-primary btn-full"> <span>←</span>متابعه</button>
+                        <button class="form-btn form-btn-primary btn-full">
+                            <span>←</span>تاكيد الرمز </button>
+                    </div>
+                    <div class="form-footer button-footer">
+                        <div class="footer-link button-footer-link link-primary">إعادة الإرسال </div>
+                        <div class="footer-question button-footer-link "> لم يصلك الرمز؟</div>
                     </div>
                 </div>
                 <div class="form-footer">
@@ -45,7 +57,6 @@
                 </div>
             </div>
         </div>
-
 
         <script src="/js/forms.js"></script>
     </body>
