--- a/forms/email-verify.html
+++ b/forms/email-verify.html
@@ -24,19 +24,19 @@
             <div class="form form-large form-gradient">
                 <div class="form-container form-large">
                     <div class="form-logo">
-                        <img src="/assets/shield.png" alt>
+                        <img src="/assets/shield.png" alt="shield-logo">
                     </div>
-                    <div class="form-question form-question-title">
+                    <div class="form-question form-question-title email-title-padding">
                         التحقق من البريد الالكتروني
                     </div>
-                    <div class="quote quote-primary quote-primary-padding">
+                    <div class="quote quote-primary  quote-primary-padding">
                        يرجى إدخال بريدك الالكتروني او رقم الهاتف 
                     </div>
                     <div class="form-input">
-                        <input type="text" placeholder="بريدك الالكتروني / رقم الهاتف ">
+                        <input type="text" class="email-input" placeholder="بريدك الالكتروني / رقم الهاتف ">
                     </div>
                     <div class="form-btn-container">
-                        <button class="form-btn form-btn-primary btn-full"> <span>←</span>متابعه</button>
+                        <button class="form-btn form-btn-primary btn-full" onclick="goToOPTForm()"> <span>←</span>متابعه</button>
                     </div>
                 </div>
                 <div class="form-footer">
