--- a/forms/session-info-form.html
+++ b/forms/session-info-form.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Email Verify</title>
+        <title>Session Info</title>
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -24,31 +24,31 @@
             <div class="form form-large form-gradient">
                 <div class="form-container form-large">
                     <div class="form-logo">
-                        <img src="/assets/secure.png" alt="secure">
+                        <img src="/assets/info-session.png" alt="person-logo">
                     </div>
-                    <div class="form-question form-question-title">
-                        تأكيد الهوية
+                    <div class="form-question">
+                        تأكيد بيانات حجز الجلسة
                     </div>
-                    <div
-                        class="quote quote-primary quote-primary-padding otp-quote">
-                        لأمان حسابك، يرجى إدخال رمز التحقق المرسل إلى بيانات
-                        التواصل المسجلة لديك
+                    <div class="quote quote-primary">
+                        تم تسجيل الدخول بنجاح. يرجى مراجعة بياناتك قبل تأكيد حجز
+                        الجلسة
                     </div>
-                    <div class="form-input otp-flex">
-                        <input class="otp-input" type="text" placeholder="0">
-                        <input class="otp-input" type="text" placeholder="0">
-                        <input class="otp-input" type="text" placeholder="0">
-                        <input class="otp-input" type="text" placeholder="0">
-                        <input class="otp-input" type="text" placeholder="0">
-                        <input class="otp-input" type="text" placeholder="0">
+
+
+                    <div class="information-container">
+                        <div class="info-col">
+                            <div class="key">الاسم كامل</div>
+                            <div class="value">محمد عبد العزيز </div>
+                        </div>
                     </div>
+
+
+
+
                     <div class="form-btn-container">
-                        <button class="form-btn form-btn-primary btn-full" onclick="goToSuccessForm()">
-                            <span>←</span>تاكيد الرمز </button>
-                    </div>
-                    <div class="form-footer button-footer">
-                        <div class="footer-link button-footer-link link-primary">إعادة الإرسال </div>
-                        <div class="footer-question button-footer-link "> لم يصلك الرمز؟</div>
+                        <button class="form-btn form-btn-primary btn-full"
+                            onclick="goToInfoForm()"> <span>←</span> 
+                            حجز الجلسة</button>
                     </div>
                 </div>
                 <div class="form-footer">
