Feature/ added/ final-success-form

--- a/forms/session-info-form.html
+++ b/forms/session-info-form.html
@@ -34,20 +34,36 @@
                         الجلسة
                     </div>
 
-
                     <div class="information-container">
                         <div class="info-col">
-                            <div class="key">الاسم كامل</div>
                             <div class="value">محمد عبد العزيز </div>
+                            <div class="key">
+                                <div>الاسم كامل </div>
+                                <img src="/assets/user-01.png"
+                                    alt="person-logo">
+                            </div>
+                        </div>
+                        <div class="info-col">
+                            <div class="value">mohamed@gmail.com </div>
+                            <div class="key">
+                                <div>البريد الالكتروني </div>
+                                <img src="/assets/user-01.png"
+                                    alt="person-logo">
+                            </div>
+                        </div>
+                        <div class="info-col">
+                            <div class="value">909978672564 </div>
+                            <div class="key">
+                                <div>رقم الجوال </div>
+                                <img src="/assets/user-01.png"
+                                    alt="person-logo">
+                            </div>
                         </div>
                     </div>
 
-
-
-
-                    <div class="form-btn-container">
+                    <div class="form-btn-container info-btns">
                         <button class="form-btn form-btn-primary btn-full"
-                            onclick="goToInfoForm()"> <span>←</span> 
+                            onclick="goToFinalSuccessForm()"> <span>←</span>
                             حجز الجلسة</button>
                     </div>
                 </div>
